--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,11 +2,11 @@
   display: none;
 }
 
-#wall .tag-2 {
+#wall #tag-2 {
   display: none;
 }
 
-#wall .tag-3 {
+#wall #tag-3.slick {
   display: none;
 }
 
