--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,11 +2,11 @@
   display: none;
 }
 
-#wall #tag-2 {
+#tag-2 {
   display: none;
 }
 
-#wall #tag-3.slick {
+#tag-3.slick {
   display: none;
 }
 
