--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -22,3 +22,6 @@ div#wall div.parent div + div:last-child div#tag-6 {
   display: none;
 }
 
+body div#wall div.parent div:first-child > #tag-7.slick {
+  display: none;
+}
